<resources>
    <string name="app_name">Helper</string>
    <string name="add_product">Добавить товар</string>
    <string name="delete_products">Очистить список</string>
    <string name="AddProduct_activity_title">Добавить товар в список</string>
    <string name="button_add">Добавить</string>
    <string name="favorite_button_text">В избранное</string>
    <string name="enter_product_name">Введите название товара</string>
    <string name="drop_table_database">Удалить все списки</string>
    <string name="custom_dialog_add_button">Добавить</string>
    <string name="custom_dialog_cancel_button">Назад</string>
    <string name="custom_dialog_title">Введите название</string>
    <string name="list_icon">Иконка списка</string>
    <string name="counts_all_products">Всего позиций: 0</string>
    <string name="bought_products">Куплено: 0</string>
    <string name="data_custom_listview">Дата</string>
    <string name="version_app">Версия приложения</string>
    <string name="list_logo">List logo</string>
    <string name="note_logo">Note logo</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="created">Создана: </string>
    <string name="share">Поделиться</string>
    <string name="bought">Куплено:</string>
    <string name="all_counts">Всего позиций:</string>
</resources>
