<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/list_icon"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/ic_insert_comment_black_24dp" />

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/image_view"
        android:paddingEnd="16dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/textview_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textview_title"
        android:layout_alignParentEnd="true"
        android:paddingEnd="16dp"
        android:text="@string/data_custom_listview"
        android:textSize="12sp" />

</RelativeLayout>